other/mitigate-log4shell/.chainsaw-test/cronjob-patched.yaml
apiVersion: batch/v1
kind: CronJob
metadata:
  name: cronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          initContainers:
          - name: busybox-init
            image: busybox:1.35
            env:
            - name: LOG4J_FORMAT_MSG_NO_LOOKUPS
              value: "true"
          - name: busybox02-init
            image: busybox:1.35
            env:
            - name: LOG4J_FORMAT_MSG_NO_LOOKUPS
              value: "true"
          containers:
          - name: busybox
            image: busybox:1.35
            env:
            - name: LOG4J_FORMAT_MSG_NO_LOOKUPS
              value: "true"
          - name: busybox02
            image: busybox:1.35
            env:
            - name: LOG4J_FORMAT_MSG_NO_LOOKUPS
              value: "true"
          restartPolicy: OnFailure
