other/mitigate-log4shell/.chainsaw-test/pod-patched02.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod02
spec:
  containers:
  - name: busybox
    image: busybox:1.35
    env:
    - name: LOG4J_FORMAT_MSG_NO_LOOKUPS
      value: "true"
  - name: busybox02
    image: busybox:1.35
    env:
    - name: LOG4J_FORMAT_MSG_NO_LOOKUPS
      value: "true"
    - name: foo
      value: bar
