other/mitigate-log4shell/.chainsaw-test/podcontroller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      initContainers:
      - name: busybox-init
        image: busybox:1.35
      - name: busybox02-init
        image: busybox:1.35
        env:
        - name: LOG4J_FORMAT_MSG_NO_LOOKUPS
          value: "false"
      containers:
      - name: busybox
        image: busybox:1.35
      - name: busybox02
        image: busybox:1.35
        env:
        - name: foo
          value: bar
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: cronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          initContainers:
          - name: busybox-init
            image: busybox:1.35
          - name: busybox02-init
            image: busybox:1.35
            env:
            - name: LOG4J_FORMAT_MSG_NO_LOOKUPS
              value: "false"
          containers:
          - name: busybox
            image: busybox:1.35
            env:
            - name: LOG4J_FORMAT_MSG_NO_LOOKUPS
              value: "false"
          - name: busybox02
            image: busybox:1.35
          restartPolicy: OnFailure
