other/mitigate-log4shell/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: mitigate-log4shell
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../mitigate-log4shell.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: pod.yaml
    - apply:
        file: podcontroller.yaml
    - assert:
        file: pod-patched01.yaml
    - assert:
        file: pod-patched02.yaml
    - assert:
        file: pod-patched03.yaml
    - assert:
        file: deploy-patched.yaml
    - assert:
        file: cronjob-patched.yaml
